src/css/Profile.css
/* Profile */
.profile{
  font-family: 'Space Grotesk', sans-serif;
  color: var(--light);
  display: grid;
  grid-template-columns: repeat(2, 50%);
  grid-template-rows: 1fr;
  justify-content: space-around;
  margin: 15px;
  grid-template-areas: 
      "profile posts";
}

.avatar{
  justify-self: left;
  max-height: 150px;
}

.user{
  grid-area: profile;
  justify-self: left;
  display: grid;
}

.createPost{
  padding-bottom: 5px;
  border-radius: 5px;
  border: 2px rgba(214,194,130,1) outset;
  background: rgb(214,194,130);
  background: linear-gradient(90deg, rgba(180,143,75,1) 3%,rgba(214,194,130,1) 90%);
  max-width: 200px;
  max-height: 150px;
  justify-self: center;
}

.headerImageProfile{
  width: 100%;
  overflow: hidden;
  background-image: url("https://imgur.com/TkHWSVv.jpg");
}

.imageProfile{
  margin-top: -30px;
  border-radius: 50%;
  overflow: hidden;
  width: 20%;
  height: 20%;
  border: 6px var(--green) solid;
  aspect-ratio: 1 / 1;
}

.userImage h2{
  margin-top: -6px;
}

.userImage p{
  padding: 2px;
  font-size: 14px;
}
.userImage{
  max-height: 300px;
}

.user{
  display: grid;
  background-color: var(--green);
  padding-bottom: 15px;
  max-height: 850px;
  border-radius: 2px;
  border: 1px rgb(13, 13, 13) solid;
}

/* Create post button */
.createPostButton {
  overflow: hidden;
  color: white;
  border-radius: 2px;
  border: 2px rgb(184, 160, 81) inset;
  box-shadow: 0px 0px 14px -7px rgba(182,148,77,1);
  background-image: linear-gradient(45deg, rgba(180,143,75,1) 0%, rgba(214,194,130,1)  51%, rgba(182,148,77,1)  100%);
  transition: all 0.3s ease;
}
.createPostButton:hover {
  background-position: right center;
  border: 2px var(--mid) outset;
  border-radius: 2px;
  color: var(--mid);
  text-decoration: none;
}

.createPost input{
  margin: 2px;
}

.createPost h3{
  color: var(--mid);
  text-shadow: 1px 1px 1px rgba(44, 44, 44, .4);
}

.createPost{
  margin-top: 150px;
}

/* Update Post */
.updateProfileContainer{
  width: 150px;
}

.updateProfile{
  margin: auto;
  max-width: 100px;
  background-color: var(--light);
  overflow: hidden;
  color: var(--mid);
  border-radius: 2px;
  border: 2px #6094be solid;
  transition: all 0.3s ease;
}

.updateProfile:hover{
  background: #89b8df;
  border-radius: 2px;
  color: var(--mid);
}

/* Posts */
.post-list{
  grid-area: posts;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap-reverse;
  justify-content: center;
  align-content: flex-start;
  min-width: 90%;
  margin-left: 32px;
  margin-right: 32px;
  padding: 15px;
  background-color: var(--green);
  border-radius: 4px;
  border: 1px rgb(13, 13, 13) solid;
}

.post-card{
  display: grid;
  grid-template-columns: 40px repeat(2, 1fr);
  grid-template-rows: 40px auto 1fr;
  grid-column-gap: 0px;
  grid-row-gap: 0px;
  color: var(--light);
  width: 400px;
  margin: 10px;
  padding: 10px;
}

.homePfp{
  grid-area: 1 / 1 / 2 / 2;
}

.postCardUsername{
  margin-left: 8px;
  grid-area: 1 / 2 / 2 / 4;
}

.postCaption{
  grid-area: 2 / 1 / 3 / 4;
  display: flex;
  flex-wrap: wrap;
  align-content: flex-start;
  align-items: flex-start;
  margin: 8px 8px 8px 0;
}

.postCaption p{
  align-content: flex-start;
  align-items: flex-start;
}

.postImage{
  grid-area: 3 / 1 / 6 / 4;
}

/* .postImage img{
  box-shadow: var(--light) -5px 5px, var(--mid) -10px 10px;
} */

.post-card p{
  grid-area: 2 / 1 / 3 / 4;
  margin: 0;
  justify-self: flex-start;
  color: var(--light);
}

.post-card a{
  justify-self: flex-start;
  color: var(--light);
}

.post-card h1{
  color: var(--light);
}

.postInput{
  height: 1.1rem;
  border-radius: 1px;
  background: rgba(37, 37, 37, .15);
  border: 2px var(--yellow) inset;
}

